--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,11 @@ jobs:
           helm lint
           helm package . 
           echo "::set-output name=chart::$(ls *.tgz)"
+      
+      - name: Get Date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y%m%d')"
+        
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -32,7 +37,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.run_id }}
-          release_name: Release ${{ github.run_id }}
+          release_name: Release ${{ steps.date.outputs.date }}
           draft: false
           prerelease: false
 
